{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 57,
  "lineage": "d209925c-6e9d-5b2f-a0b4-a7c98ea116e1",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:security-group/sg-012376a22979c8b62",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-012376a22979c8b62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "node_group_one20221019075735607400000005",
            "name_prefix": "node_group_one",
            "owner_id": "954678508118",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_two",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:security-group/sg-0a936b06d6c6f7bdc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a936b06d6c6f7bdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "node_group_two20221019075735605700000004",
            "name_prefix": "node_group_two",
            "owner_id": "954678508118",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:security-group/sg-03930a7dcbb5a881b",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03930a7dcbb5a881b",
            "ingress": [],
            "name": "DemoEKS-qa-qa-cluster-20221019075736127800000007",
            "name_prefix": "DemoEKS-qa-qa-cluster-",
            "owner_id": "954678508118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DemoEKS-qa-qa-cluster"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:security-group/sg-0cb9687af6d55d941",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0cb9687af6d55d941",
            "ingress": [],
            "name": "DemoEKS-qa-qa-node-20221019075736037500000006",
            "name_prefix": "DemoEKS-qa-qa-node-",
            "owner_id": "954678508118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DemoEKS-qa-qa-node",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "owned"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-node",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1199486481",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03930a7dcbb5a881b",
            "self": false,
            "source_security_group_id": "sg-0cb9687af6d55d941",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2147633518",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03930a7dcbb5a881b",
            "self": false,
            "source_security_group_id": "sg-0cb9687af6d55d941",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4073793655",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03930a7dcbb5a881b",
            "self": false,
            "source_security_group_id": "sg-0cb9687af6d55d941",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-328335334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": false,
            "source_security_group_id": "sg-03930a7dcbb5a881b",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-2650306902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1109804104",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1018716485",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2556514151",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-369544449",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-108372880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": false,
            "source_security_group_id": "sg-03930a7dcbb5a881b",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3879360369",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": false,
            "source_security_group_id": "sg-03930a7dcbb5a881b",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1265165191",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-4013375592",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cb9687af6d55d941",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026ca05d18c3ac4f8",
            "domain": "vpc",
            "id": "eipalloc-026ca05d18c3ac4f8",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-63-181.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.63.181",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DemoEKS-qa-qa-ap-south-1a"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-ap-south-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:internet-gateway/igw-0af5f5655201cdf46",
            "id": "igw-0af5f5655201cdf46",
            "owner_id": "954678508118",
            "tags": {
              "Name": "DemoEKS-qa-qa"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa"
            },
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-026ca05d18c3ac4f8",
            "connectivity_type": "public",
            "id": "nat-000c051f98162ba1a",
            "network_interface_id": "eni-07ff35c1dba301cb2",
            "private_ip": "10.1.4.175",
            "public_ip": "15.206.63.181",
            "subnet_id": "subnet-09831cfd555edc15f",
            "tags": {
              "Name": "DemoEKS-qa-qa-ap-south-1a"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-ap-south-1a"
            }
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_eip.nat",
            "module.eks_cluster.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08f340c8fda149f9e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-000c051f98162ba1a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f340c8fda149f9e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_eip.nat",
            "module.eks_cluster.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster.module.vpc.aws_nat_gateway.this",
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0af5f5655201cdf46",
            "id": "r-rtb-0c826fa9ae3f30dd91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c826fa9ae3f30dd9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:route-table/rtb-08f340c8fda149f9e",
            "id": "rtb-08f340c8fda149f9e",
            "owner_id": "954678508118",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "DemoEKS-qa-qa-private"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:route-table/rtb-0c826fa9ae3f30dd9",
            "id": "rtb-0c826fa9ae3f30dd9",
            "owner_id": "954678508118",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "DemoEKS-qa-qa-public"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc62bd48828f938f",
            "route_table_id": "rtb-08f340c8fda149f9e",
            "subnet_id": "subnet-084f8c7b646f2273e"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.private",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0398ccdb1cd80a126",
            "route_table_id": "rtb-08f340c8fda149f9e",
            "subnet_id": "subnet-0dad25ecdc7f0cf7e"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.private",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0959d81595c2b7ef9",
            "route_table_id": "rtb-08f340c8fda149f9e",
            "subnet_id": "subnet-00db4f10606c1e417"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.private",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072ed4fcd7d4c0119",
            "route_table_id": "rtb-0c826fa9ae3f30dd9",
            "subnet_id": "subnet-09831cfd555edc15f"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc05a9a678b339a9",
            "route_table_id": "rtb-0c826fa9ae3f30dd9",
            "subnet_id": "subnet-0b76a945e8f7ac08e"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5d40e12f8431c53",
            "route_table_id": "rtb-0c826fa9ae3f30dd9",
            "subnet_id": "subnet-0b71712f70d25e9bd"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-084f8c7b646f2273e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084f8c7b646f2273e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-qa-qa-private-ap-south-1a",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-private-ap-south-1a",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-0dad25ecdc7f0cf7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dad25ecdc7f0cf7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-qa-qa-private-ap-south-1b",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-private-ap-south-1b",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-00db4f10606c1e417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00db4f10606c1e417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-qa-qa-private-ap-south-1c",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-private-ap-south-1c",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-09831cfd555edc15f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09831cfd555edc15f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-qa-qa-public-ap-south-1a",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-public-ap-south-1a",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-0b76a945e8f7ac08e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.1.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b76a945e8f7ac08e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-qa-qa-public-ap-south-1b",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-public-ap-south-1b",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-0b71712f70d25e9bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.1.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b71712f70d25e9bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-qa-qa-public-ap-south-1c",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa-public-ap-south-1c",
              "kubernetes.io/cluster/DemoEKS-qa-qa": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b13e964bf0a9603e"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:vpc/vpc-0b13e964bf0a9603e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-050b29debb0e1699c",
            "default_route_table_id": "rtb-05bdd70b0b1c14e29",
            "default_security_group_id": "sg-0f1cbe93f7281631c",
            "dhcp_options_id": "dopt-a564b9ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b13e964bf0a9603e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05bdd70b0b1c14e29",
            "owner_id": "954678508118",
            "tags": {
              "Name": "DemoEKS-qa-qa"
            },
            "tags_all": {
              "Name": "DemoEKS-qa-qa"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}